--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.2",
-    "@mui/material": "^6.4.2",
+    "@mui/icons-material": "^6.4.3",
+    "@mui/material": "^6.4.3",
+    "@mui/x-data-grid": "^7.25.0",
     "@reduxjs/toolkit": "^2.5.1",
     "add": "^2.0.6",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "prune": "^0.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -35,6 +37,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "vite": "^6.0.11"
+    "vite": "^6.1.0"
   }
 }
