--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react-swc": "^3.7.2",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.20.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
   }
